Add Object info and detail-bordereau

--- a/GazeChim/ClientApp/src/app/components/bar-code/bar-code.component.html
+++ b/GazeChim/ClientApp/src/app/components/bar-code/bar-code.component.html
@@ -29,3 +29,4 @@
 
 </html>
 <app-timeline [timeElements]="listTimeElements"></app-timeline>
+<app-object-info [title]="'Opérateur'" [object]="object"></app-object-info>
