--- a/GazeChim/ClientApp/src/app/components/category/category.component.html
+++ b/GazeChim/ClientApp/src/app/components/category/category.component.html
@@ -1,7 +1,11 @@
 <div class="grid-container">
-<mat-tab-group animationDuration="0ms">
-  <mat-tab label="A">
-    <div class="droite">
+
+  <ion-segment value="{{selectedOption}}" (ionChange)="loadCategory($event)" [(ngModel)]="selectedOption">
+        <ion-segment-button *ngFor="let cat of listCategory" [value]="cat.label">
+            <ion-label>{{cat.label}}</ion-label>
+        </ion-segment-button>
+  </ion-segment>
+    <div class="droite"  *ngIf="selectedOption == 'A'" >
         <p class="centered">Accès général A</p>
         <mat-divider></mat-divider>
         <p>Chambres, parties de bâtiments, bâtiment où :</p>
@@ -15,26 +19,22 @@
                   terminus de transports en commun, hôtels, logements, restaurants.
         </p>
     </div>
-  </mat-tab>
 
-  <mat-tab label="B">
-    <div class="gauche">
+    <div class="gauche"  *ngIf="selectedOption == 'B'">
       <p class="centered">Accès surveillé B</p>
       <mat-divider></mat-divider>
       <p >
         Cependant, si vous avez accès à la page Web elle-même, vous pouvez facilement afficher son code source en utilisant les outils de développement intégrés à la plupart des navigateurs Web modernes. Par exemple, dans Google Chrome, vous pouvez accéder aux outils de développement en appuyant sur F12, en cliquant sur le menu de trois points en haut à droite, puis en sélectionnant "Plus d'outils" > "Outils de développement". Dans la fenêtre qui s'ouvre, vous pouvez cliquer sur l'onglet "Elements" pour afficher le code HTML de la page.
       </p>
     </div>
-  </mat-tab>
-  <mat-tab label="C">
-    <div >
+
+    <div  *ngIf="selectedOption == 'C'">
       <p class="centered">Accès reservé C</p>
       <mat-divider></mat-divider>
       <p>
         Cependant, si vous avez accès à la page Web elle-même, vous pouvez facilement afficher son code source en utilisant les outils de développement intégrés à la plupart des navigateurs Web modernes. Par exemple, dans Google Chrome, vous pouvez accéder aux outils de développement en appuyant sur F12, en cliquant sur le menu de trois points en haut à droite, puis en sélectionnant "Plus d'outils" > "Outils de développement". Dans la fenêtre qui s'ouvre, vous pouvez cliquer sur l'onglet "Elements" pour afficher le code HTML de la page.
       </p>
     </div>
-  </mat-tab>
-</mat-tab-group>
+
 </div>
 
