--- a/GazeChim/ClientApp/src/app/components/system/system.component.scss
+++ b/GazeChim/ClientApp/src/app/components/system/system.component.scss
@@ -1,9 +1,3 @@
-.selectFluide {
-  border-radius: 4px;
-  padding: 2px;
-  background-color: beige;
-  color: black;
-  margin-bottom: 2px;
-  margin-right: 2px;
-  flex-basis: 3%;
+.color{
+  --ion-color-primary: #0d47a1;
 }
