Add fluid Calculator 2.0

--- a/GazeChim/ClientApp/src/app/components/system/system.component.html
+++ b/GazeChim/ClientApp/src/app/components/system/system.component.html
@@ -39,7 +39,7 @@
       <div class="ion-padding">
         <ion-item>
           <ion-label position="floating">Volume</ion-label>
-          <ion-input type="number" [(ngModel)]="volume"></ion-input>
+          <ion-input type="number" disabled="true" [(ngModel)]="volume"></ion-input>
         </ion-item>
       </div>
     </ion-col>
